# hivin_bot

./: .env.bak  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: commands.rs  lib.rs  main.rs  message_handler.rs  my_handler.rs  service.rs
src/commands/: answer.rs  start_command.rs
src/my_handler/: admin.rs  admin_callback.rs  callback_query.rs  group.rs  group_event.rs  group_set.rs  poll_message.rs  welcome_message.rs
src/service/: group.rs  msg.rs  polling_msg.rs  user.rs
tests/: group_msg.rs  group_test.rs  msg_test.rs  user_test.rs
tests/common/: mod.rs
